media/css/zamboni/zamboni.css
/* ... */
.arrow.next:before {
    left: 6px;
    top: 9px;
    border-top-color: #0471ed;
}

.other-note {
    display: none;
    clear: left;
    padding: .25em 0 0 1em;
    margin: 0;
}
.other-note input[type='text'] {
    width: 150px;
}
.other-note input[type='submit'] {
    margin-top: -2px;
}
.other .other-note,
.review-reason a {
    display: block;
}

/** Reviews *********/

ul.review-options {
    float: right;
    font-size: .9em;
    margin-top: 1em;
    margin-bottom: 2px;
    color: #aaa;
}
ul.review-options > li {
    float: left;
}
.review ul.review-options > li > a {
    font-weight: normal;
    color: #aaa;
    -moz-transition: color .2s;
    -webkit-transition: color .2s;
    transition: color .2s;
}
ul.review-options > li:not(:first-child) {
    list-style-type: disc;
    margin-left: 1.6em;
}
.article.review {
    margin-bottom: 1em;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    overflow: visible;
}
.review h5 {
    float: left;
    margin-right: .8em;
    font-size: 120%;
}
.html-rtl .review h5 {
    float: right;
    margin-right: inherit;
    margin-left: .8em;
}
.review p {
    margin: 1em 0 0 0;
}
.review .reviewed-on {
    clear: left;
    font-size: .9em;
}
.html-rtl .review .reviewed-on {
    clear: right;
}
.review.deleted {
    display: none;
}
h6.author, .author a {
    font-weight: normal;
}
.reviews .highlight > span {
    display: block;
}
.reviews .highlight hgroup {
    display: block;
    margin-bottom: 1em;
}
.reviews .highlight > div {
    margin: 0;
    padding: 1em .2em;
    border-top: 1px dashed #ccc;
    font-size: .9em;
}
.reviews .highlight > div:last-child {
    text-align: center;
    padding-bottom: 0;
}

.average_rating {
    margin: 0 .2em;
}

.average_rating .stars {
    margin-right: .9em;
}

.article .review-detail .show-more {
    font-weight: normal;
    float: right;
}

/* grouped ratings style */

.grouped_ratings .rating_bar {
    border-left: 1px solid black;
    margin-left: 72px;
    padding-right: 4em;
    height: 2em;
}

.grouped_ratings li {
    margin: 0;
    overflow: hidden;
    height: 2em;
}

.grouped_ratings .rating_bar span.bar {
    display: block;
    background: #acd;
    float: left;
    margin: .4em .5em 0 0;
    height: .9em;
    position: relative;
}

.grouped_ratings .rating_bar span.num_ratings {
    position: absolute;
    right: -.5em;
    top: -2px;
    line-height: 1em;
    width: 1px;
}

.html-rtl .grouped_ratings .rating_bar {
    border-left: 0;
    border-right: 1px solid black;
    margin-left: 0;
    margin-right: 72px;
    padding-right: 0;
    padding-left: 4em;
}

.html-rtl .grouped_ratings .rating_bar span.bar {
    float: right;
    margin: .4em 0 0 .5em;
}

.html-rtl .grouped_ratings .rating_bar span.num_ratings {
    right: inherit;
    left: -.5em;
}


/* stacking the stars to the right for the grouped ratings */

.grouped_ratings .stars-4 {
    background-position: 13px 50%;
}
.grouped_ratings .stars-3 {
    background-position: 26px 50%;
}
.grouped_ratings .stars-2 {
    background-position: 39px 50%;
}
.grouped_ratings .stars-1 {
    background-position: 52px 50%;
}
.grouped_ratings .stars-0 {
    background-position: 65px 50%;
}

/* review form */

#review-box form {
    width: 48%;
    height: 200px;
    float: left;
    padding: 0 10px 1em 0;
    margin-right: 1em;
}

#review-box textarea {
    margin-bottom: 1em;
    height: 100px;
}

#review-box div {
    padding-left: 48%;
}

.review-form p > label {
    float: left;
    width: 8em;
}

#review-form {
    margin: 2em 1em 0 1em;
}

.review-form textarea {
    margin: 1em 0 1em 0;
    clear: left;
}

.review-form .ratingwidget {
    float: left;
    margin-bottom:0;
}

.review-form input[type='text'] {
    width: 15em;
}

.ratingwidget input {
    display: none;
}

.ratingwidget {
    display: block;
    float: none;
    width: 65px;
    margin-bottom: 1em;
}

.ratingwidget label {
    text-indent: -5000px;
    display: block;
    float: left;
    width: 13px;
}

.review:hover ul.review-options > li > a {
    color: #0055EE;
}
.review-wrapper {
    position: relative;
}
.reviews header {
    margin-left: 0;
}
.highlight h5 {
    font-size: 120%;
}
.review.reply {
    margin-left: 4em;
    background: #f0f6f2;
    border-color: #d0e2c5;
}
.review .review-note {
    float: left;
    font-size: .9em;
    margin-top: 1em;
    margin-bottom: 2px;
    font-style: italic;
}

.review.reply-form {
    background: #C8E8F3;
    border: 0;
}
.reply-form form {
    margin-bottom: 0;
}
.reply-form label {
    display: block;
    margin-top: 1em;
}
label > .optional {
    font-weight: normal;
    color: #888;
}
.reply-form textarea {
    margin-bottom: 2em;
    width: 80%;
}
.reply-form h3 {
    margin: 0;
}
.reply-form input[type='text'] {
    width: 60%;
}

.collection-add {
    left: -42px;
}

.collection-add-dropdown, .collection-rate-dropdown {
    margin: 0;
    display: none;
    width: 200px;
    padding: 1em;
}

.collection-rate-dropdown {
    margin-top:1em;
}

.upvote .collection-rate-dropdown {
    left: -56px;
}

.downvote .collection-rate-dropdown {
    left: inherit;
    right: -76px;
}

.popup h3 {
    margin-top: 0;
}
#add-to-collection form {
    margin-bottom: 0;
}
#add-to-collection #id_description {
    height: 6em;
}

#id_slug {
    border-left: 0;
    display: none;
}
#id_slug:focus {
    outline: 0;
}
#slug_edit span {
    border: 1px solid #5875A0;
    border-right:0;
    padding: 2px 2px 2px 5px;
    background: #eee;
}

#slug_edit span, #slug_readonly {
    color: #888;
}
#slug_value {
    color: #222;
}

#collection-form-slug,
#clear-recents {
    font-size: .9em;
}

#collection-favorites-opts li {
    display: inline-block;
    margin-right: 1em;
}

.collections-details #id_name {
    display: block;
    -moz-box-sizing: border-box;
    width: 100%;
}

#collection_listed {
    margin-bottom: 1.5em;
}

#collection_listed ul label {
    font-weight: normal;
}
/* ... */

